--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "@types/node": "^25.2.1",
     "prettier": "^3.8.1",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "axios": "^1.13.4",
+    "cheerio": "^1.2.0",
+    "dotenv": "^17.2.4",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^8.0.0",
+    "pino": "^10.3.0"
   }
 }
