--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": ""
+    "dev": "tsx src/index.ts"
   },
   "keywords": [],
   "author": "Rakin Rahman",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/node": "^25.2.1",
     "prettier": "^3.8.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
