--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "packageManager": "pnpm@10.28.2",
   "devDependencies": {
     "@types/node": "^25.2.1",
+    "@types/nodemailer": "^7.0.9",
     "prettier": "^3.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
