--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "",
   "packageManager": "pnpm@10.28.2",
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20260207.0",
     "@types/node": "^25.2.1",
     "@types/nodemailer": "^7.0.9",
     "prettier": "^3.8.1",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "wrangler": "^4.63.0"
   },
   "dependencies": {
     "cheerio": "^1.2.0",
