--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsx src/index.ts"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy"
   },
   "keywords": [],
   "author": "Rakin Rahman",
@@ -14,17 +13,13 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20260207.0",
     "@types/node": "^25.2.1",
-    "@types/nodemailer": "^7.0.9",
     "prettier": "^3.8.1",
-    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "wrangler": "^4.63.0"
   },
   "dependencies": {
     "cheerio": "^1.2.0",
-    "dotenv": "^17.2.4",
-    "node-cron": "^4.2.1",
-    "nodemailer": "^8.0.0",
-    "pino": "^10.3.0"
+    "pino": "^10.3.0",
+    "resend": "^6.9.1"
   }
 }
