--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,8 @@
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
     "target": "esnext",
-    "types": [],
-    // For nodejs:
     "lib": ["esnext"],
-    "types": ["node"],
+    "types": ["node", "@cloudflare/workers-types"],
     // and npm install -D @types/node
 
     // Other Outputs
